samples/_failures_safe/1761513082_34d9a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce25bf74.c:137:1: error: expected identifier or ‘(’ at end of input
  137 | int
      | ^~~
